--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
 				<td rowspan="3" class="left">Work Experience</td>
 				<td class="right">
 					<p><span class="title">Job Title at Comapny</span> <br> <p>
-					<p class="tits"><span class="year">April 2011 - Present</span><br></p>
+					<p class="bc"><span class="year">April 2011 - Present</span><br></p>
 					<p class="text">Your resume is your opportunity to present yourself as the most qualified candidate for the position for which you are applying. Including an about me section in your resume can help you stand out as a candidate hiring managers or recruiters want to learn more about, which can help you get an interview. In this article, we discuss what an about me section in a resume entails, the benefits of including an about me section and examples of how to write one.</p>
 				</td>
 			</tr>
 			<tr>
 				<td class="right">
 					<p><span class="title">Job Title at Comapny</span> <br> <p>
-					<p class="tits"><span class="year">April 2011 - Present</span><br></p>
+					<p class="bc"><span class="year">April 2011 - Present</span><br></p>
 					<p class="text">Your resume is your opportunity to present yourself as the most qualified candidate for the position for which you are applying. Including an about me section in your resume can help you stand out as a candidate hiring managers or recruiters want to learn more about, which can help you get an interview. In this article, we discuss what an about me section in a resume entails, the benefits of including an about me section and examples of how to write one.</p>
 				</td>
 			</tr>
 			<tr>
 				<td class="right">
 					<p><span class="title">Job Title at Comapny</span> <br> <p>
-					<p class="tits"><span class="year">April 2011 - Present</span><br></p>
+					<p class="bc"><span class="year">April 2011 - Present</span><br></p>
 					<p class="text">Your resume is your opportunity to present yourself as the most qualified candidate for the position for which you are applying. Including an about me section in your resume can help you stand out as a candidate hiring managers or recruiters want to learn more about, which can help you get an interview. In this article, we discuss what an about me section in a resume entails, the benefits of including an about me section and examples of how to write one.</p>
 				</td>
 			</tr>
